test/corpus/expression/fun.txt
================================================================================
simple anonymous fun
================================================================================

fun() -> ok end.

--------------------------------------------------------------------------------

(source_file
  (anonymous_fun
    (fun_clause
      (expr_args)
      (clause_body
        (atom)))))

================================================================================
anonymous fun with argument
================================================================================

fun(X) -> X end.

--------------------------------------------------------------------------------

(source_file
  (anonymous_fun
    (fun_clause
      (expr_args
        (var))
      (clause_body
        (var)))))

================================================================================
anonymous fun with multiple arguments
================================================================================

fun(X, Y) -> X + Y end.

--------------------------------------------------------------------------------

(source_file
  (anonymous_fun
    (fun_clause
      (expr_args
        (var)
        (var))
      (clause_body
        (binary_op_expr
          (var)
          (var))))))

================================================================================
anonymous fun with multiple clauses
================================================================================

fun(0) -> zero; (N) -> N end.

--------------------------------------------------------------------------------

(source_file
  (anonymous_fun
    (fun_clause
      (expr_args
        (integer))
      (clause_body
        (atom)))
    (fun_clause
      (expr_args
        (var))
      (clause_body
        (var)))))

================================================================================
anonymous fun with guard
================================================================================

fun(X) when X > 0 -> positive; (_) -> non_positive end.

--------------------------------------------------------------------------------

(source_file
  (anonymous_fun
    (fun_clause
      (expr_args
        (var))
      (guard
        (guard_clause
          (binary_op_expr
            (var)
            (integer))))
      (clause_body
        (atom)))
    (fun_clause
      (expr_args
        (var))
      (clause_body
        (atom)))))

================================================================================
anonymous fun with pattern matching
================================================================================

fun({ok, Value}) -> Value; ({error, _}) -> error end.

--------------------------------------------------------------------------------

(source_file
  (anonymous_fun
    (fun_clause
      (expr_args
        (tuple
          (atom)
          (var)))
      (clause_body
        (var)))
    (fun_clause
      (expr_args
        (tuple
          (atom)
          (var)))
      (clause_body
        (atom)))))

================================================================================
named fun (recursive)
================================================================================

fun Fact(0) -> 1; Fact(N) -> N * Fact(N - 1) end.

--------------------------------------------------------------------------------

(source_file
  (anonymous_fun
    (fun_clause
      (var)
      (expr_args
        (integer))
      (clause_body
        (integer)))
    (fun_clause
      (var)
      (expr_args
        (var))
      (clause_body
        (binary_op_expr
          (var)
          (call
            (var)
            (expr_args
              (binary_op_expr
                (var)
                (integer)))))))))

================================================================================
internal fun reference
================================================================================

fun foo/1.

--------------------------------------------------------------------------------

(source_file
  (internal_fun
    (atom)
    (arity
      (integer))))

================================================================================
external fun reference
================================================================================

fun lists:map/2.

--------------------------------------------------------------------------------

(source_file
  (external_fun
    (module
      (atom))
    (atom)
    (arity
      (integer))))

================================================================================
fun reference with variable arity
================================================================================

fun foo/Arity.

--------------------------------------------------------------------------------

(source_file
  (internal_fun
    (atom)
    (arity
      (var))))

================================================================================
external fun reference with variables
================================================================================

fun Mod:Fun/Arity.

--------------------------------------------------------------------------------

(source_file
  (external_fun
    (module
      (var))
    (var)
    (arity
      (var))))

================================================================================
fun with complex body
================================================================================

fun(X) ->
    Y = X * 2,
    Z = Y + 1,
    Z
end.

--------------------------------------------------------------------------------

(source_file
  (anonymous_fun
    (fun_clause
      (expr_args
        (var))
      (clause_body
        (match_expr
          (var)
          (binary_op_expr
            (var)
            (integer)))
        (match_expr
          (var)
          (binary_op_expr
            (var)
            (integer)))
        (var)))))

================================================================================
fun passed to higher order function
================================================================================

lists:map(fun(X) -> X * 2 end, List).

--------------------------------------------------------------------------------

(source_file
  (call
    (remote
      (remote_module
        (atom))
      (atom))
    (expr_args
      (anonymous_fun
        (fun_clause
          (expr_args
            (var))
          (clause_body
            (binary_op_expr
              (var)
              (integer)))))
      (var))))

================================================================================
fun reference passed to higher order function
================================================================================

lists:map(fun double/1, [1, 2, 3]).

--------------------------------------------------------------------------------

(source_file
  (call
    (remote
      (remote_module
        (atom))
      (atom))
    (expr_args
      (internal_fun
        (atom)
        (arity
          (integer)))
      (list
        (integer)
        (integer)
        (integer)))))

================================================================================
fun with list operations
================================================================================

fun(L) -> [X * 2 || X <- L] end.

--------------------------------------------------------------------------------

(source_file
  (anonymous_fun
    (fun_clause
      (expr_args
        (var))
      (clause_body
        (list_comprehension
          (binary_op_expr
            (var)
            (integer))
          (lc_exprs
            (lc_or_zc_expr
              (generator
                (var)
                (var)))))))))

================================================================================
fun returning fun
================================================================================

fun(X) -> fun(Y) -> X + Y end end.

--------------------------------------------------------------------------------

(source_file
  (anonymous_fun
    (fun_clause
      (expr_args
        (var))
      (clause_body
        (anonymous_fun
          (fun_clause
            (expr_args
              (var))
            (clause_body
              (binary_op_expr
                (var)
                (var)))))))))
