test/corpus/expression/operator.txt
================================================================================
arithmetic addition
================================================================================

1 + 2.

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (integer)
    (integer)))

================================================================================
arithmetic subtraction
================================================================================

5 - 3.

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (integer)
    (integer)))

================================================================================
arithmetic multiplication
================================================================================

4 * 5.

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (integer)
    (integer)))

================================================================================
arithmetic division
================================================================================

10 / 2.

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (integer)
    (integer)))

================================================================================
integer division
================================================================================

10 div 3.

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (integer)
    (integer)))

================================================================================
integer remainder
================================================================================

10 rem 3.

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (integer)
    (integer)))

================================================================================
unary plus
================================================================================

+42.

--------------------------------------------------------------------------------

(source_file
  (unary_op_expr
    (integer)))

================================================================================
unary minus
================================================================================

-42.

--------------------------------------------------------------------------------

(source_file
  (unary_op_expr
    (integer)))

================================================================================
comparison equal
================================================================================

A == B.

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (var)
    (var)))

================================================================================
comparison not equal
================================================================================

A /= B.

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (var)
    (var)))

================================================================================
comparison exactly equal
================================================================================

A =:= B.

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (var)
    (var)))

================================================================================
comparison exactly not equal
================================================================================

A =/= B.

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (var)
    (var)))

================================================================================
comparison less than
================================================================================

A < B.

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (var)
    (var)))

================================================================================
comparison greater than
================================================================================

A > B.

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (var)
    (var)))

================================================================================
comparison less than or equal
================================================================================

A =< B.

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (var)
    (var)))

================================================================================
comparison greater than or equal
================================================================================

A >= B.

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (var)
    (var)))

================================================================================
logical and
================================================================================

true and false.

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (atom)
    (atom)))

================================================================================
logical or
================================================================================

true or false.

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (atom)
    (atom)))

================================================================================
logical xor
================================================================================

true xor false.

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (atom)
    (atom)))

================================================================================
logical not
================================================================================

not true.

--------------------------------------------------------------------------------

(source_file
  (unary_op_expr
    (atom)))

================================================================================
short-circuit andalso
================================================================================

A andalso B.

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (var)
    (var)))

================================================================================
short-circuit orelse
================================================================================

A orelse B.

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (var)
    (var)))

================================================================================
bitwise and
================================================================================

A band B.

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (var)
    (var)))

================================================================================
bitwise or
================================================================================

A bor B.

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (var)
    (var)))

================================================================================
bitwise xor
================================================================================

A bxor B.

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (var)
    (var)))

================================================================================
bitwise not
================================================================================

bnot A.

--------------------------------------------------------------------------------

(source_file
  (unary_op_expr
    (var)))

================================================================================
bitwise shift left
================================================================================

A bsl 2.

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (var)
    (integer)))

================================================================================
bitwise shift right
================================================================================

A bsr 2.

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (var)
    (integer)))

================================================================================
list concatenation
================================================================================

[1, 2] ++ [3, 4].

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (list
      (integer)
      (integer))
    (list
      (integer)
      (integer))))

================================================================================
list subtraction
================================================================================

[1, 2, 3] -- [2].

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (list
      (integer)
      (integer)
      (integer))
    (list
      (integer))))

================================================================================
match operator
================================================================================

X = 42.

--------------------------------------------------------------------------------

(source_file
  (match_expr
    (var)
    (integer)))

================================================================================
send operator
================================================================================

Pid ! message.

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (var)
    (atom)))

================================================================================
operator precedence multiplication over addition
================================================================================

1 + 2 * 3.

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (integer)
    (binary_op_expr
      (integer)
      (integer))))

================================================================================
operator precedence with parentheses
================================================================================

(1 + 2) * 3.

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (paren_expr
      (binary_op_expr
        (integer)
        (integer)))
    (integer)))

================================================================================
operator precedence comparison and orelse
================================================================================

A =:= -1 orelse B =:= -1.

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (binary_op_expr
      (var)
      (unary_op_expr
        (integer)))
    (binary_op_expr
      (var)
      (unary_op_expr
        (integer)))))

================================================================================
chained comparison
================================================================================

A < B andalso B < C.

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (binary_op_expr
      (var)
      (var))
    (binary_op_expr
      (var)
      (var))))

================================================================================
complex expression
================================================================================

(A + B) * C / D - E.

--------------------------------------------------------------------------------

(source_file
  (binary_op_expr
    (binary_op_expr
      (binary_op_expr
        (paren_expr
          (binary_op_expr
            (var)
            (var)))
        (var))
      (var))
    (var)))
